--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,5 @@ project(VectorLoop)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(.)
-
 add_executable(VectorLoop sample.cpp)
+target_include_directories(VectorLoop PUBLIC /usr/include/python3.10)
