--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
-cmake_minimum_required(VERSION 3.29)
-project(VectorLoop)
-
+cmake_minimum_required(VERSION 3.22)
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(VectorLoop sample.cpp)
-target_include_directories(VectorLoop PUBLIC /usr/include/python3.10)
+add_subdirectory(external/pybind11)
+
+# python package ----------------------------------------------
+project(VectorLoop)
+
+pybind11_add_module(VectorLoop pybind.cpp)
+target_include_directories(VectorLoop PUBLIC
+        submodules/pybind11/include
+        /usr/include/python3.10)
